--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <img class="card-photo" src="img/man.jpeg" alt="Сойка Александр">
             <h1 class="card-title">Сойка Александр</h1>
             <div class="card-text">
-                <p>Я создал данную карточку, чтобы познакомится с html и css на практике. Это моя первая практика прошу не судите строго)</p>
+                <p>Я создал данную карточку, чтобы познакомится с html и css на практике. Это моя первая работа прошу не судите строго)</p>
                 <p> В данный момент нахожусь в поиске работы в IT индустрие.</p>
             </div>
             <h2 class="card-subtitle">Мои навыки:</h2>
